Fixed and spacing in votes button principal

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,7 @@ body {
       .votes__up, .votes__down {
         height: 100%;
         min-width: 50%;
+        padding: 10px 0;
         display: flex;
         justify-content: center;
         align-items: center;
